infra/k8s/istio/peer-authentication.yml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: default
  namespace: iwos
spec:
  mtls:
    mode: STRICT
