infra/k8s/istio/gateway.yml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: iwos-gateway
  namespace: iwos
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "api.iwos.in"
    - port:
        number: 443
        name: https
        protocol: HTTPS
      tls:
        mode: SIMPLE
        credentialName: iwos-tls-cert
      hosts:
        - "api.iwos.in"
